--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,10 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
-    "modernizr": "~2.8.3"
+    "modernizr": "~2.8.3",
+    "jquery-colorbox": "~1.6.3",
+    "SimpleStateManager": "ssm#~3.0.0",
+    "handlebars": "~4.0.3"
   },
   "overrides": {
     "bootstrap-sass": {
